# rsbird

./: .gitignore  CHANGELOG.md  README.md  SPEC.md  pyproject.toml
fixtures/bird-1.6.8-ipv4/: _manifest.json
fixtures/bird-1.6.8-ipv4/show_protocols/: default.input
fixtures/bird-1.6.8-ipv4/show_protocols_all/: default.input  rs1_ipv4.input  rs2_ipv4.input
fixtures/bird-1.6.8-ipv4/show_route_export/: rs1_ipv4.input  rs2_ipv4.input
fixtures/bird-1.6.8-ipv4/show_route_for/: 0.0.0.0_0.all.input  0.0.0.0_0.input  10.0.0.0_24.all.input  10.0.0.0_24.input  10.1.1.0_24.all.input  10.1.1.0_24.input  10.2.2.0_24.all.input  10.2.2.0_24.input  10.3.3.0_24.all.input  10.3.3.0_24.input  10.6.0.0_24.all.input  10.6.0.0_24.input
fixtures/bird-1.6.8-ipv4/show_route_protocol/: rs1_ipv4.filtered.input  rs1_ipv4.input  rs2_ipv4.filtered.input  rs2_ipv4.input
fixtures/bird-1.6.8-ipv4/show_route_table/: master.input
fixtures/bird-1.6.8-ipv4/show_status/: default.input
fixtures/bird-1.6.8-ipv6/: _manifest.json
fixtures/bird-2.0.8/: _manifest.json
fixtures/bird-2.0.8/show_route_for/: _0.all.input  (+23 more)
fixtures/bird-3.1.2/: _manifest.json
lab/: README.md  capture_fixtures.py  docker-compose.yaml
lab/bird/: bird-1.6.8v4.conf  bird-1.6.8v6.conf  bird-2.0.8.conf  bird-3.1.2.conf  rs1-bird.conf  rs2-bird.conf
rsbird/: __init__.py  client.py  dual.py  exceptions.py  models.py  protocol.py
rsbird/parsers/: __init__.py  _common.py  configure.py  protocols.py  routes.py  status.py  symbols.py
tests/: conftest.py  test_cli.py  test_client.py  test_config_ops.py  test_dual.py  test_models.py  test_protocol.py
tests/test_parsers/: test_configure.py  test_protocols.py  test_routes.py  test_status.py  test_symbols.py
tools/: capture_fixtures.py
(+95 files in other folders)
